Detection fixes and elliot tracking revisions